- Header layout bugfixes - Update card layout to match project-topics

--- a/sass/cards-container.scss
+++ b/sass/cards-container.scss
@@ -25,7 +25,7 @@
   @include desktop {
     justify-content: space-between;
     .card {
-      width: calc(33.33% - 13px);
+      width: calc(33.33% - 14px);
     }
   }
 }
